# rsl_deteccao_fraude_telecom

./: .gitignore  pyproject.toml
input/: artigos_start.xls
source/: modelgem_topicos.ipynb
