[project]
name = "rsl-deteccao-fraude-telecom"
version = "0.1.0"
description = "Revisão Sistemática da Literatura sobre Detecção de Fraudes em Telecomunicações"
authors = [
    {name = "Rangel",email = "rgelsp@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "wordcloud (>=1.9.6,<2.0.0)"